--- a/srlc/srl/templates/srl/il_leaderboard.html
+++ b/srlc/srl/templates/srl/il_leaderboard.html
@@ -49,7 +49,7 @@
             </select>
         </form>
         
-        <table id="leaderboard-table" class="table table-striped">
+        <table id="leaderboard-table" class="table table-striped table-light table-hover">
             <thead>
                 <tr>
                     <th class="bg-info">Rank</th>
