--- a/srlc/srl/templates/srl/il_leaderboard_expanded.html
+++ b/srlc/srl/templates/srl/il_leaderboard_expanded.html
@@ -42,7 +42,7 @@
         </form>
         <div class="main-page-container">
             <div class="main-table">
-                <table id="leaderboard-table" class="table table-striped main-wrs">
+                <table id="leaderboard-table" class="table table-striped table-light table-hover main-wrs">
                     <thead>
                         <tr>
                             <th class="bg-info">Rank</th>
@@ -72,7 +72,7 @@
 
             <div class="side-table">
                 <div class="latest-wrs">
-                    <table id="leaderboardTable" class="table table-striped">
+                    <table id="leaderboardTable" class="table table-striped table-light table-hover">
                         <thead class="bg-info">
                             <tr>
                                 <th colspan="2" class="bg-info">Record Counts</th>
@@ -115,7 +115,7 @@
                     </table>
                 </div>
                 <div class="latest-runs">
-                    <table id="leaderboardTable" class="table table-striped">
+                    <table id="leaderboardTable" class="table table-striped table-light table-hover">
                         <thead>
                             <tr class="bg-info">
                                 <th colspan="4" class="bg-info">Oldest Records</th>
