--- a/srlc/srl/templates/srl/leaderboard.html
+++ b/srlc/srl/templates/srl/leaderboard.html
@@ -48,7 +48,7 @@
             <br />
         {% endif %}
 
-        <table id="leaderboardTable" class="table table-striped">
+        <table id="leaderboardTable" class="table table-striped table-light table-hover">
             <thead>
                 <tr>
                     {% if "/fullgame" in request.path %}
