Updated custom filters; changed to relative link for Valhalla flag

--- a/srlc/srl/static/srl/misc/css.css
+++ b/srlc/srl/static/srl/misc/css.css
@@ -148,6 +148,8 @@ td.now-streaming {
 
 td.side-table-td {
     font-size: medium !important;
+    min-height: 65px;
+    height: 65px;
 }
 
 .pfp-img-streaming {
