Added info on thps3+4 tournament

--- a/srlc/srl/templates/srl/navbar.html
+++ b/srlc/srl/templates/srl/navbar.html
@@ -11,25 +11,25 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Runner Rankings</a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="/overall">Combined</a></li>
-                  <li><a class="dropdown-item" href="/fullgame">Main Game</a></li>
-                  <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Individual Levels</a>
-                      <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="/thps1/all">THPS1</a></li>
-                          <li><a class="dropdown-item" href="/thps2/all">THPS2</a></li>
-                          <li><a class="dropdown-item" href="/thps3/all">THPS3</a></li>
-                          <li><a class="dropdown-item" href="/thps4/all">THPS4</a></li>
-                          <li><a class="dropdown-item" href="/thps4ce/all">THPS4 CE</a></li>
-                          <li><a class="dropdown-item" href="/thug1/all">THUG1</a></li>
-                          <li><a class="dropdown-item" href="/thug2/all">THUG2</a></li>
-                          <li><a class="dropdown-item" href="/thaw/all">THAW</a></li>
-                          <li><a class="dropdown-item" href="/thps12/all">THPS1+2</a></li>
-                          <li><a class="dropdown-item" href="/thps12ce/all">THPS1+2 CE</a></li>
-                      </ul>
-                  </li>
-              </ul>
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Runner Rankings</a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <li><a class="dropdown-item" href="/overall">Combined</a></li>
+                    <li><a class="dropdown-item" href="/fullgame">Main Game</a></li>
+                    <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Individual Levels</a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="/thps1/all">THPS1</a></li>
+                            <li><a class="dropdown-item" href="/thps2/all">THPS2</a></li>
+                            <li><a class="dropdown-item" href="/thps3/all">THPS3</a></li>
+                            <li><a class="dropdown-item" href="/thps4/all">THPS4</a></li>
+                            <li><a class="dropdown-item" href="/thps4ce/all">THPS4 CE</a></li>
+                            <li><a class="dropdown-item" href="/thug1/all">THUG1</a></li>
+                            <li><a class="dropdown-item" href="/thug2/all">THUG2</a></li>
+                            <li><a class="dropdown-item" href="/thaw/all">THAW</a></li>
+                            <li><a class="dropdown-item" href="/thps12/all">THPS1+2</a></li>
+                            <li><a class="dropdown-item" href="/thps12ce/all">THPS1+2 CE</a></li>
+                        </ul>
+                    </li>
+                </ul>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Main LBs</a>
@@ -138,7 +138,14 @@
                             <li><a class="dropdown-item" href="https://thpsx.com/forums/index.php?topic=1529.0" target="_blank">THUG2</a></li>
                         </ul>
                     </li>
+                    <li><a class="dropdown-item" href="https://github.com/atljp/THUG-SDL" target="_blank">THUG1 SDL Mod</a></li>
                 </ul>
+            </li>
+
+            <div class="vr"></div>
+
+            <li class="nav-item">
+                <a class="nav-link" style="color: red;" href="/tournament">THPS3+4 Tournament</a>
             </li>
         </ul>
         <ul class="navbar-nav social ml-autio">
