Fixed some text about the tourney

--- a/srlc/srl/templates/srl/tourney.html
+++ b/srlc/srl/templates/srl/tourney.html
@@ -57,14 +57,14 @@
                         <h3>Qualifying Information</h3>
                         <ul>
                             <li>All runners are required to join the <a href="/discord" target="_blank">THPS Speedrun Discord</a> and agree to the community rules. No exceptions.</li>
-                            <li>PLEASE make sure your Discord name in this server is the same (or similar enough to) what is on Speedrun.com or thps.run!</li>
+                            <li>PLEASE make sure your Discord name in this server is the same (or similar enough to) what is on here!</li>
                             <li>6 maps will be selected from the pool before qualifying begins, excluding newly introduced maps:
                                 <ul>    
                                     <li>THPS3: Foundry + 2 Random</li>
                                     <li>THPS4: College + 2 Random</li>
                                 </ul>
                             </li>
-                            <li>Tournament will use PacklePoints (found on thps.run) from those 6 maps for seeding. Tie-breakers are, in order:
+                            <li>Tournament will use the Points system seen on this site to determine seeding. Tie-breakers are, in order:
                                 <ol>
                                     <li>Average placement</li>
                                     <li>Most WRs</li>
@@ -79,7 +79,7 @@
                                     <li>If you submit a run, but forget to include the tag or would like to submit it after approval; lemme know!</li>
                                 </ul>
                             </li>
-                            <li>A special page will be shown on thps.run to display up-to-date/approved runs, separate from the real THPS3+4 board.</li>
+                            <li>A special page will be shown on this site to display up-to-date/approved runs, separate from the real THPS3+4 boards.</li>
                         </ul>
 
                         <h3>Tournament Rules will be shown closer to the event, but it is pretty much the same as THPS1+2's except for map striking.</h3>
