Updated tournament info

--- a/srlc/srl/templates/srl/tourney.html
+++ b/srlc/srl/templates/srl/tourney.html
@@ -31,7 +31,7 @@
             <tbody>
                 <td>
                     <div class="markdown-body">
-                        <h3>Prize Pool: $550</h3>
+                        <h3>Prize Pool: $700</h3>
                         <h3>Single-Elimination</h3>
                         <h3>Best-of-3 [Semifinals and Finals is Best-of-5]</h3>
                         <hr />
@@ -45,13 +45,14 @@
                             <li>July 28 - ???: Tournament</li>
                         </ul>
 
-                        <h3>Winnings ($550 Prize Pool)</h3>
+                        <h3>Winnings ($700 Prize Pool)</h3>
                         <ul>
-                            <li>1st: $300</li>
-                            <li>2nd: $150</li>
-                            <li>3rd: $75</li>
-                            <li>4th: $25</li>
+                            <li>1st: $325</li>
+                            <li>2nd: $175</li>
+                            <li>3rd: $125</li>
+                            <li>4th: $75</li>
                             <li>If you wanna donate to the prize pool, lemme know!</li>
+                            <li>(Initial: $550; Anonymous: $100; Pete: $50)
                         </ul>
 
                         <h3>Qualifying Information</h3>
